# OilandGasChatbot

./: LICENSE  Procfile  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  scheduler.py  setup_vps.sh
ml/: __init__.py  chatbot.py  classifier.pkl  classifier_state.json  cluster_state.json  clusters.pkl  embeddings.pkl  entities.json  evaluate.py  labels.json  ner_extraction.py  ner_processed.json  processed_articles.json  semantic_embeddings.py  text_classifier.py  topic_clustering.py  train_all.py
scrapers/: boereport.py  energy_economictimes_indiatimes.py  energynow.py  indianoilandgas.py  news_oilandgaswatch.py  offshore_energy.py  ogj.py  oilprice.py  reuters.py  reuters_climate.py  rigzone.py  utils.py  worldoil.py
scrapers/backups/: articles_backup_20251224.csv
web/: app.py
web/templates/: index.html
